<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.uarmy.art.mark_sync.MarkSync" >
    <item android:id="@+id/action_sync"
        android:title="@string/action_sync"
        android:icon="@drawable/sync"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_apply_merge_results"
        android:title="@string/action_apply_merge_results"
        android:icon="@drawable/apply_merge_results"
        android:orderInCategory="2"
        app:showAsAction="ifRoom|withText" />
    <item android:id="@+id/action_cancel_sync_results"
        android:title="@string/action_cancel_sync_results"
        android:icon="@drawable/cancel_sync_results"
        android:orderInCategory="1"
        app:showAsAction="ifRoom|withText" />
</menu>
